# crane

./: .gitignore  CLAUDE.md  GOALS.md  README.md  pyproject.toml
.github/: dependabot.yml
docs/: 2026-06-12-crane-design.md  2026-06-16-basin-of-attraction-design.md  2026-06-16-phase4a1-novelty-assessment.md  2026-06-16-rocker-foot-compass-design.md  2026-06-16-rocker-foot-kneed-design.md  2026-06-16-wheel-limit-design.md  2026-06-17-active-basin-design.md  2026-06-17-powered-rocker-design.md  2026-06-17-powered-simplest-design.md
scripts/: active_basin_sweep.py  basin_compare.py  basin_map.py  bifurcation_compass.py  walk_compass.py  walk_kneed.py  walk_powered.py  walk_powered_rocker.py  walk_rocker.py  walk_rocker_kneed.py  walk_simplest.py  wheel_limit.py
src/crane/: viz.py  (+12 more)
tests/: test_active_basin_gate.py  test_basin_classify.py  test_basin_simplest_literature.py  test_basin_slice.py  test_basin_stability_gate.py  test_compass.py  test_compass_continuation.py  test_compass_cycle.py  test_compass_garcia_limit.py  test_derive_impact.py  test_derive_lagrange.py  test_efficiency.py  test_kneed_compass_limit.py  test_kneed_cycle.py  test_kneed_dynamics.py  test_kneed_impacts.py  test_kneed_stride.py  test_phase0.py  test_powered_rocker_cycle.py  test_powered_rocker_degenerate.py  test_powered_rocker_impact.py  test_powered_simplest_cycle.py  test_powered_simplest_degenerate.py  test_powered_simplest_impact.py  test_references.py  test_references_goswami.py  test_references_kneed.py  test_references_kuo.py  test_references_mcgeer.py  test_references_mcgeer_knees.py  (+21 more)
(+21 files in other folders)
