[project]
name = "crane"
version = "0.1.0"
description = "Passive dynamic walking limit cycle discovery (math-first revival of Heron)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "scipy>=1.18.0",
    "matplotlib>=3.9",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crane"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
